name:                group-with
version:             0.1.0.0
synopsis:            A library to classify objects by a function value, like SQL GROUP BY
description:         A library to classify objects into multimaps by using a function generating
                     keys for any object in the list. Provides a more flexible approach to
                     GHC.Exts.

homepage:            https://github.com/ulikoehler/group-with
license:             Apache-2.0
license-file:        LICENSE
author:              Uli Köhler
maintainer:          ukoehler@techoverflow.net
-- copyright:           
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules: Control.GroupWith
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.6 && <4.7, containers >= 0.3
  -- hs-source-dirs:
  default-language:    Haskell2010

Test-Suite test-groupby
    type:       exitcode-stdio-1.0
    main-is:    GroupWithTest.hs
    default-language:    Haskell2010
    build-depends: base, Cabal >= 1.9.2, hspec, hspec-expectations,
                   containers >= 0.3, QuickCheck